kyverno/policy-require-app-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-label
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-app-label
      match:
        any:
        - resources:
            kinds:
              - Service
      validate:
        message: "Services must have 'app' label."
        pattern:
          metadata:
            labels:
              app: "?*"
